--- a/LeckerBag/WebContent/bestellung_kunde.html
+++ b/LeckerBag/WebContent/bestellung_kunde.html
@@ -7,19 +7,21 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">         
         <meta name="description" content="Beschreibung der Seite">         
         <meta name="author" content="Paul Kozakiewicz">         
-        <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">         
-        <link href="css/bootstrap.css" rel="stylesheet">         
-        <link href="css/style.css" rel="stylesheet" type="text/css">
         <link href="css/datepicker.css" rel="stylesheet" type="text/css">         
-        <link href="css/bootstrap-responsive.css" rel="stylesheet">
+        <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">         
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">      
+        <link href="css/style.css" rel="stylesheet" type="text/css">         
         <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,900,500' rel='stylesheet' type='text/css'>
-        <script src="js/jquery.js"></script>         
-        <script src="js/typeahead.jquery.min.js"></script>
+        <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+        <script type="text/javascript" src="https://twitter.github.io/typeahead.js/releases/latest/typeahead.bundle.js"></script>    
         <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
         <script> 
 			$(function(){
-			  $("#header").load("header.html"); 
-			  $("#footer").load("footer.html");
+		        $("#header").load("header.html", function(){
+		        	setNav(2);
+		        	autoCenter();
+		        });
+			  	$("#footer").load("footer.html"); 
 			});
 		</script>         
     </head>     
@@ -140,14 +142,8 @@
             </div>
         </div>         
         <div class="row" id="footer" data-pg-collapsed></div>         
-        <!-- Ende des Dokumentes -->         
-        <script>
-	        $("#header").load("header.html", function(){
-	        	setNav(2);
-	        	autoCenter();
-	        });  
-        </script>
-        <script src="js/bootstrap.js"></script>
+        <!-- Ende des Dokumentes -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>   
         <script src="js/bootstrap-datepicker.js"></script>         
         <script src="js/functions.js"></script>
         <script src="js/kunde_maps_bestellung.js"></script>
