--- a/LeckerBag/WebContent/bestellung_kunde_s2.html
+++ b/LeckerBag/WebContent/bestellung_kunde_s2.html
@@ -8,23 +8,71 @@
         <meta name="description" content="Beschreibung der Seite">         
         <meta name="author" content="Paul Kozakiewicz">         
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">         
-        <link href="css/bootstrap.css" rel="stylesheet">         
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">      
         <link href="css/style.css" rel="stylesheet" type="text/css">         
-        <link href="css/bootstrap-responsive.css" rel="stylesheet">
         <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,900,500' rel='stylesheet' type='text/css'>
-        <script src="js/jquery.js"></script>         
+        <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>   
         <!-- Scheduler -->
         <script src="http://cdn.alloyui.com/3.0.1/aui/aui-min.js"></script>
-        <link href="http://cdn.alloyui.com/3.0.1/aui-css/css/bootstrap.min.css" rel="stylesheet">
-    </link>
-    <!-- Scheduler -->
-    <script> 
-			$(function(){
-			  $("#header").load("header.html"); 
-			  $("#footer").load("footer.html");
-			});
+   		<!-- Scheduler -->
+    	<script> 
+		$(function(){
+	        $("#header").load("header.html", function(){
+	        	setNav(2);
+	        	var eventRecorder = document.getElementsByClassName("scheduler-view-table-colgrid");
+	        	for(var i=0; i<eventRecorder.length; i++){
+	        		eventRecorder[i].addEventListener('click', function(){
+	        			var id = $(this).attr("id");
+	        			var element = document.getElementById(id);
+	        			if (element.classList.contains('bestellung_td_selected') ){
+	        				element.classList.remove('bestellung_td_selected');
+	        			}
+	        			else{
+	        				element.className = element.className+" bestellung_td_selected";
+	        			}
+	        		}, false);
+	        	}
+	        });
+		  	$("#footer").load("footer.html"); 
+		});
+        //TODO: Popover momentan redundand aber egal
+        var setTrafficLight = function(light){
+        	if(light === 1){
+        		document.getElementById("ampel_1").style.color = '#00bd00';
+        		document.getElementById("ampel_2").style.color = '#eeeeee';
+        		document.getElementById("ampel_3").style.color = '#eeeeee';
+        		$("#ampel_1").popover({ placement : 'top', html: true, title: unescape('N%E4hrwerttabelle'), content: function (){ return $('#popover_content_wrapper').html();}});
+        		$("#ampel_2").popover({ placement : 'top', html: true, title: unescape('N%E4hrwerttabelle'), content: function (){ return $('#popover_content_wrapper').html();}});
+        		$("#ampel_3").popover({ placement : 'top', html: true, title: unescape('N%E4hrwerttabelle'), content: function (){ return $('#popover_content_wrapper').html();}});
+        		$("#ampel_1").popover('enable');
+        		$("#ampel_3").popover('disable');
+        		$("#ampel_2").popover('disable');
+        	}
+        	else if(light === 2){
+        		document.getElementById("ampel_2").style.color = '#ffff00';
+        		document.getElementById("ampel_1").style.color = '#eeeeee';
+        		document.getElementById("ampel_3").style.color = '#eeeeee';
+        		$("#ampel_1").popover({ placement : 'top', html: true, title: unescape('N%E4hrwerttabelle'), content: function (){ return $('#popover_content_wrapper').html();}});
+        		$("#ampel_2").popover({ placement : 'top', html: true, title: unescape('N%E4hrwerttabelle'), content: function (){ return $('#popover_content_wrapper').html();}});
+        		$("#ampel_3").popover({ placement : 'top', html: true, title: unescape('N%E4hrwerttabelle'), content: function (){ return $('#popover_content_wrapper').html();}});
+        		$("#ampel_2").popover('enable');
+        		$("#ampel_1").popover('disable');
+        		$("#ampel_3").popover('disable');
+        	}
+        	else{
+        		document.getElementById("ampel_3").style.color = '#d10000';
+        		document.getElementById("ampel_2").style.color = '#eeeeee';
+        		document.getElementById("ampel_1").style.color = '#eeeeee';
+        		$("#ampel_1").popover({ placement : 'top', html: true, title: unescape('N%E4hrwerttabelle'), content: function (){ return $('#popover_content_wrapper').html();}});
+        		$("#ampel_2").popover({ placement : 'top', html: true, title: unescape('N%E4hrwerttabelle'), content: function (){ return $('#popover_content_wrapper').html();}});
+        		$("#ampel_3").popover({ placement : 'top', html: true, title: unescape('N%E4hrwerttabelle'), content: function (){ return $('#popover_content_wrapper').html();}});
+        		$("#ampel_3").popover('enable');
+        		$("#ampel_1").popover('disable');
+        		$("#ampel_2").popover('disable');
+        	}
+        };
 		</script>     
-</head> 
+	</head> 
 <body>
     <div class="row" id="header" data-pg-collapsed></div>     
     <div class="row">
@@ -295,77 +343,25 @@
     <div class="row" id="footer" data-pg-collapsed></div>     
     <!-- Ende des Dokumentes -->     
     <script>
-	        $("#header").load("header.html", function(){
-	        	setNav(2);
-	        	var eventRecorder = document.getElementsByClassName("scheduler-view-table-colgrid");
-	        	for(var i=0; i<eventRecorder.length; i++){
-	        		eventRecorder[i].addEventListener('click', function(){
-	        			var id = $(this).attr("id");
-	        			var element = document.getElementById(id);
-	        			if (element.classList.contains('bestellung_td_selected') ){
-	        				element.classList.remove('bestellung_td_selected');
-	        			}
-	        			else{
-	        				element.className = element.className+" bestellung_td_selected";
-	        			}
-	        		}, false);
-	        	}
-	        });  
-	        //TODO: Popover momentan redundand aber egal
-	        var setTrafficLight = function(light){
-	        	if(light === 1){
-	        		document.getElementById("ampel_1").style.color = '#00bd00';
-	        		document.getElementById("ampel_2").style.color = '#eeeeee';
-	        		document.getElementById("ampel_3").style.color = '#eeeeee';
-	        		$("#ampel_1").popover({ placement : 'top', html: true, title: unescape('N%E4hrwerttabelle'), content: function (){ return $('#popover_content_wrapper').html();}});
-	        		$("#ampel_2").popover({ placement : 'top', html: true, title: unescape('N%E4hrwerttabelle'), content: function (){ return $('#popover_content_wrapper').html();}});
-	        		$("#ampel_3").popover({ placement : 'top', html: true, title: unescape('N%E4hrwerttabelle'), content: function (){ return $('#popover_content_wrapper').html();}});
-	        		$("#ampel_1").popover('enable');
-	        		$("#ampel_3").popover('disable');
-	        		$("#ampel_2").popover('disable');
-	        	}
-	        	else if(light === 2){
-	        		document.getElementById("ampel_2").style.color = '#ffff00';
-	        		document.getElementById("ampel_1").style.color = '#eeeeee';
-	        		document.getElementById("ampel_3").style.color = '#eeeeee';
-	        		$("#ampel_1").popover({ placement : 'top', html: true, title: unescape('N%E4hrwerttabelle'), content: function (){ return $('#popover_content_wrapper').html();}});
-	        		$("#ampel_2").popover({ placement : 'top', html: true, title: unescape('N%E4hrwerttabelle'), content: function (){ return $('#popover_content_wrapper').html();}});
-	        		$("#ampel_3").popover({ placement : 'top', html: true, title: unescape('N%E4hrwerttabelle'), content: function (){ return $('#popover_content_wrapper').html();}});
-	        		$("#ampel_2").popover('enable');
-	        		$("#ampel_1").popover('disable');
-	        		$("#ampel_3").popover('disable');
-	        	}
-	        	else{
-	        		document.getElementById("ampel_3").style.color = '#d10000';
-	        		document.getElementById("ampel_2").style.color = '#eeeeee';
-	        		document.getElementById("ampel_1").style.color = '#eeeeee';
-	        		$("#ampel_1").popover({ placement : 'top', html: true, title: unescape('N%E4hrwerttabelle'), content: function (){ return $('#popover_content_wrapper').html();}});
-	        		$("#ampel_2").popover({ placement : 'top', html: true, title: unescape('N%E4hrwerttabelle'), content: function (){ return $('#popover_content_wrapper').html();}});
-	        		$("#ampel_3").popover({ placement : 'top', html: true, title: unescape('N%E4hrwerttabelle'), content: function (){ return $('#popover_content_wrapper').html();}});
-	        		$("#ampel_3").popover('enable');
-	        		$("#ampel_1").popover('disable');
-	        		$("#ampel_2").popover('disable');
-	        	}
-	        };
     </script>
     <script>
-        		YUI().use(
-        		  'aui-scheduler',
-        		  function(Y) {
-        		    var events = [
-        		      {
-        		      }
-        		    ];
-        		    var monthView = new Y.SchedulerMonthView();
-        			new Y.Scheduler({
-        		        boundingBox: '#bestellung2_scheduler',
-        		        date: new Date(2015, 8, 1),
-        		        items: events,
-        		        render: true,
-        		        views: [monthView]
-        			});
-        		  }
-        		);
+   		YUI().use(
+   		  'aui-scheduler',
+   		  function(Y) {
+   		    var events = [
+   		      {
+   		      }
+   		    ];
+   		    var monthView = new Y.SchedulerMonthView();
+   			new Y.Scheduler({
+   		        boundingBox: '#bestellung2_scheduler',
+   		        date: new Date(2015, 8, 1),
+   		        items: events,
+   		        render: true,
+   		        views: [monthView]
+   			});
+   		  }
+   		);
     </script>
     <script>
     	YUI().use(
@@ -459,6 +455,6 @@
     			  }
     			);
     </script>
-    <script src="js/bootstrap.js"></script>     
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>      
     <script src="js/functions.js"></script>     
 </body>
