--- a/LeckerBag/WebContent/dashboard_kunde.html
+++ b/LeckerBag/WebContent/dashboard_kunde.html
@@ -1,29 +1,27 @@
 <!DOCTYPE html> 
 <html> 
-    <head> 
-        <meta charset="utf-8">         
+    <head>       
         <meta charset="UTF-8">         
         <title>Leckerbag - Die gesunde Alternative</title>         
         <meta name="viewport" content="width=device-width, initial-scale=1.0">         
         <meta name="description" content="Beschreibung der Seite">         
         <meta name="author" content="Paul Kozakiewicz">         
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">         
-        <link href="css/bootstrap.css" rel="stylesheet">         
-        <link href="css/style.css" rel="stylesheet" type="text/css">
-        <link href="css/datepicker.css" rel="stylesheet" type="text/css">         
-        <link href="css/bootstrap-responsive.css" rel="stylesheet">
-        <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,900,500' rel='stylesheet' type='text/css'>         
-        <script src="js/jquery.js"></script>         
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">      
+        <link href="css/style.css" rel="stylesheet" type="text/css">         
+        <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,900,500' rel='stylesheet' type='text/css'>
+        <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
         <!-- Scheduler -->
         <script src="http://cdn.alloyui.com/3.0.1/aui/aui-min.js"></script>
-        <link href="http://cdn.alloyui.com/3.0.1/aui-css/css/bootstrap.min.css" rel="stylesheet"></link>
     	<!-- Scheduler -->
-    	<script> 
+        <script> 
 			$(function(){
-			  $("#header").load("header.html"); 
-			  $("#footer").load("footer.html");
+		        $("#header").load("header.html", function(){
+		        	setNav(2);
+		        });
+			  	$("#footer").load("footer.html"); 
 			});
-		</script>     
+		</script>        
 </head> 
 <body>
     <div class="row" id="header"></div>     
@@ -238,8 +236,7 @@
         			});
         		}
         	);
-        </script>
-    <script src="js/bootstrap.js"></script>
-    <script src="js/datepicker.js"></script>     
-    <script src="js/functions.js"></script>     
+    </script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>        
+    <script src="js/functions.js"></script>    
 </body> 
