--- a/LeckerBag/WebContent/dashboard_lieferant.html
+++ b/LeckerBag/WebContent/dashboard_lieferant.html
@@ -8,24 +8,22 @@
         <meta name="description" content="Beschreibung der Seite">         
         <meta name="author" content="Paul Kozakiewicz">         
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">         
-        <link href="css/bootstrap.css" rel="stylesheet">         
-        <link href="css/style.css" rel="stylesheet" type="text/css">
-        <link href="css/datepicker.css" rel="stylesheet" type="text/css">         
-        <link href="css/bootstrap-responsive.css" rel="stylesheet">
-        <link href='http://fonts.googleapis.com/css?family=Roboto:100,300,400,500,900' rel='stylesheet' type='text/css'>         
-        <script src="js/jquery.js"></script>         
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">      
+        <link href="css/style.css" rel="stylesheet" type="text/css">         
+        <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,900,500' rel='stylesheet' type='text/css'>
+        <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>      
         <!-- Scheduler -->
         <script src="http://cdn.alloyui.com/3.0.1/aui/aui-min.js"></script>
-        <link href="http://cdn.alloyui.com/3.0.1/aui-css/css/bootstrap.min.css" rel="stylesheet">
         <script src="js/d3.min.js"></script>
-    </link>
-    <!-- Scheduler -->
-    <script> 
+    	<!-- Scheduler -->
+        <script> 
 			$(function(){
-			  $("#header").load("header2.html"); 
-			  $("#footer").load("footer.html");
+		        $("#header").load("header2.html", function(){
+		        	setNav(2);
+		        });
+			  	$("#footer").load("footer.html"); 
 			});
-		</script>     
+		</script>      
 </head> 
 <body>
     <div class="row" id="header" data-pg-collapsed></div>     
@@ -76,7 +74,7 @@
                                 <h5>Ihre Produkte</h5>
                                 <ul class="pg-empty-placeholder">
                                     <li class="list_text">
-                                        <a>Produktkonfiguration starten</a>
+                                        <a href="Konfigurator_Seite1.html">Produktkonfiguration starten</a>
                                     </li>
                                 </ul>
                             </div>
@@ -168,9 +166,6 @@ Ich kann über Müllerbäck nichts schlechtes berichten.
                                             <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12" id="datas_dashboard_lieferant">
                                                 <div class="row">
                                                     <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12" id="dataTable_dashboard_lieferant_1" data-pg-collapsed></div>
-                                                    <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12" id="dataTableG1_dashboard_lieferant_1"></div>
-                                                    <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12" id="dataTableG2_dashboard_lieferant_1"></div>
-                                                    <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12" id="dataTableG3_dashboard_lieferant_1"></div>
                                                 </div>
                                             </div>
                                         </div>
@@ -216,7 +211,7 @@ Ich kann über Müllerbäck nichts schlechtes berichten.
                                                     <th>Zusatzinformation
                                                         <br>
                                                     </th>
-                                                    <th>Bag-Spende
+                                                    <th>
                                                         <br>
                                                     </th>                                                     
                                                 </tr>                                                 
@@ -429,11 +424,6 @@ Ich kann über Müllerbäck nichts schlechtes berichten.
     <div class="row" id="footer" data-pg-collapsed></div>     
     <!-- Ende des Dokumentes -->     
     <script>
-	        $("#header").load("header.html", function(){
-	        	setNav(2);
-	        });
-        </script>
-    <script>
         	YUI().use(
         		'aui-scheduler',
         		function(Y) {
@@ -496,67 +486,6 @@ Ich kann über Müllerbäck nichts schlechtes berichten.
     			}
     		}
     	};
-
-    </script>
-    <script>
-		YUI().use(
-  		  'aui-datatable',
-  		  function(Y) {
-  		    var columns = ['Weizenbrötchen', 'Volkornbrot', 'Volkornbrötchen'];
-
-  		    var data = [
-  		      {Weizenbrötchen: '2 x mit Salami', Volkornbrot: '1 x mit Ei', Volkornbrötchen: '1 x mit Putenaufschnitt'},
-  		    {Weizenbrötchen: '', Volkornbrot: '1 x mit Schinken', Volkornbrötchen: ''},
-  		    ];
-
-  		    new Y.DataTable.Base(
-  		      {
-  		        columnset: columns,
-  		        recordset: data
-  		      }
-  		    ).render('#dataTableG1_dashboard_lieferant_1');
-  		  }
-  		);
-    </script>
-    <script>
-	YUI().use(
-	  		  'aui-datatable',
-	  		  function(Y) {
-	  		    var columns = ['Banane', 'Apfel', 'Nektarine'];
-
-	  		    var data = [
-	  		      {Banane: '2', Apfel: '3', Nektarine: '1'},
-	  		    ];
-
-	  		    new Y.DataTable.Base(
-	  		      {
-	  		        columnset: columns,
-	  		        recordset: data
-	  		      }
-	  		    ).render('#dataTableG2_dashboard_lieferant_1');
-	  		  }
-	  		);
-    </script>
-    <script>
-	YUI().use(
-	  		  'aui-datatable',
-	  		  function(Y) {
-	  		    var columns = ['Apfelschorle', 'Stilles_Wasser', 'Milch'];
-
-	  		    var data = [
-	  		      {Apfelschorle: '1', Stilles_Wasser: '3', Milch: '1'},
-	  		    ];
-
-	  		    new Y.DataTable.Base(
-	  		      {
-	  		        columnset: columns,
-	  		        recordset: data
-	  		      }
-	  		    ).render('#dataTableG3_dashboard_lieferant_1');
-	  		  }
-	  		);
-    </script>
-    <script>
     	var displayDataTableDash = function (value) {
     		document.getElementById("datasHolder_dashboard_lieferant").style = 'display:block';
     		colorStorniert();
@@ -649,67 +578,66 @@ Ich kann über Müllerbäck nichts schlechtes berichten.
     });
     </script>
     <script>
-    var margin = {top: 20, right: 20, bottom: 30, left: 40},
-        width = 557 - margin.left - margin.right,
-        height = 505 - margin.top - margin.bottom;
-
-    var x = d3.scale.ordinal()
-        .rangeRoundBands([0, width], .1);
-
-    var y = d3.scale.linear()
-        .range([height, 0]);
-
-    var xAxis = d3.svg.axis()
-        .scale(x)
-        .orient("bottom");
-
-    var yAxis = d3.svg.axis()
-        .scale(y)
-        .orient("left")
-        .ticks(10, "%");
-
-    var svg = d3.select(".bar").append("svg")
-        .attr("width", width + margin.left + margin.right)
-        .attr("height", height + margin.top + margin.bottom)
-      .append("g")
-        .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
-
-    d3.tsv("data/data.tsv", type, function(error, data) {
-      x.domain(data.map(function(d) { return d.letter; }));
-      y.domain([0, d3.max(data, function(d) { return d.frequency; })]);
-
-      svg.append("g")
-          .attr("class", "x axis")
-          .attr("transform", "translate(0," + height + ")")
-          .call(xAxis);
-
-      svg.append("g")
-          .attr("class", "y axis")
-          .call(yAxis)
-        .append("text")
-          .attr("transform", "rotate(-90)")
-          .attr("y", 6)
-          .attr("dy", ".71em")
-          .style("text-anchor", "end")
-          .text("Frequency");
-
-      svg.selectAll(".bar")
-          .data(data)
-        .enter().append("rect")
-          .attr("class", "bar")
-          .attr("x", function(d) { return x(d.letter); })
-          .attr("width", x.rangeBand())
-          .attr("y", function(d) { return y(d.frequency); })
-          .attr("height", function(d) { return height - y(d.frequency); });
-
-    });
-
-    function type(d) {
-      d.frequency = +d.frequency;
-      return d;
-    }
+	    var margin = {top: 20, right: 20, bottom: 30, left: 40},
+	        width = 557 - margin.left - margin.right,
+	        height = 505 - margin.top - margin.bottom;
+	
+	    var x = d3.scale.ordinal()
+	        .rangeRoundBands([0, width], .1);
+	
+	    var y = d3.scale.linear()
+	        .range([height, 0]);
+	
+	    var xAxis = d3.svg.axis()
+	        .scale(x)
+	        .orient("bottom");
+	
+	    var yAxis = d3.svg.axis()
+	        .scale(y)
+	        .orient("left")
+	        .ticks(10, "%");
+	
+	    var svg = d3.select(".bar").append("svg")
+	        .attr("width", width + margin.left + margin.right)
+	        .attr("height", height + margin.top + margin.bottom)
+	      .append("g")
+	        .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+	
+	    d3.tsv("data/data.tsv", type, function(error, data) {
+	      x.domain(data.map(function(d) { return d.letter; }));
+	      y.domain([0, d3.max(data, function(d) { return d.frequency; })]);
+	
+	      svg.append("g")
+	          .attr("class", "x axis")
+	          .attr("transform", "translate(0," + height + ")")
+	          .call(xAxis);
+	
+	      svg.append("g")
+	          .attr("class", "y axis")
+	          .call(yAxis)
+	        .append("text")
+	          .attr("transform", "rotate(-90)")
+	          .attr("y", 6)
+	          .attr("dy", ".71em")
+	          .style("text-anchor", "end")
+	          .text("Frequency");
+	
+	      svg.selectAll(".bar")
+	          .data(data)
+	        .enter().append("rect")
+	          .attr("class", "bar")
+	          .attr("x", function(d) { return x(d.letter); })
+	          .attr("width", x.rangeBand())
+	          .attr("y", function(d) { return y(d.frequency); })
+	          .attr("height", function(d) { return height - y(d.frequency); });
+	
+	    });
+	
+	    function type(d) {
+	      d.frequency = +d.frequency;
+	      return d;
+	    }
     </script>
-    <script src="js/bootstrap.js"></script>
-    <script src="js/datepicker.js"></script>     
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>    
     <script src="js/functions.js"></script>     
 </body>
