--- a/LeckerBag/WebContent/kind_bearbeiten.html
+++ b/LeckerBag/WebContent/kind_bearbeiten.html
@@ -7,11 +7,21 @@
         <meta name="description" content="Beschreibung der Seite">         
         <meta name="author" content="Paul Kozakiewicz">         
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">         
-        <link href="css/bootstrap.css" rel="stylesheet">         
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">      
         <link href="css/style.css" rel="stylesheet" type="text/css">         
-        <link href="css/bootstrap-responsive.css" rel="stylesheet">         
+        <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,900,500' rel='stylesheet' type='text/css'>
+        <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+        <script> 
+			$(function(){
+		        $("#header").load("header.html", function(){
+		        	setNav(0);
+		        });
+			  	$("#footer").load("footer.html"); 
+			});
+		</script>     
     </head>     
-    <body> 
+    <body>
+    <div class="row" id="header"></div>    
         <div class="row">
             <div class="col-md-12">
                 <div class="container wrapper">
@@ -37,7 +47,7 @@
                             <a href="profil_kind.html">Mein Kind</a>
                         </li>
                         <li>
-                            <font>Mein Kind bearbeiten</font>
+                            <font>Mein Kind hinzufügen</font>
                         </li>
                     </ol>
                     <div class="row">
@@ -75,10 +85,10 @@
                     </div>
                 </div>                 
             </div>
-        </div>         
+        </div>
+        <div class="row" id="footer"></div>         
         <!-- Ende des Dokumentes -->         
-        <script src="js/jquery.js"></script>         
-        <script src="js/bootstrap.js"></script>         
+    	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>       
         <script src="js/functions.js"></script>         
     </body>     
 </html>
