--- a/LeckerBag/WebContent/mein_profil_kunde.html
+++ b/LeckerBag/WebContent/mein_profil_kunde.html
@@ -7,17 +7,18 @@
         <meta name="description" content="Beschreibung der Seite">         
         <meta name="author" content="Paul Kozakiewicz">         
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">         
-        <link href="css/bootstrap.css" rel="stylesheet">         
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">      
         <link href="css/style.css" rel="stylesheet" type="text/css">         
-        <link href="css/bootstrap-responsive.css" rel="stylesheet">         
         <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,900,500' rel='stylesheet' type='text/css'>
-        <script src="js/jquery.js"></script>         
+        <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
         <script> 
 			$(function(){
-			  $("#header").load("header.html"); 
-			  $("#footer").load("footer.html"); 
+		        $("#header").load("header.html", function(){
+		        	setNav(2);
+		        });
+			  	$("#footer").load("footer.html"); 
 			});
-		</script>         
+		</script>           
     </head>     
     <body>
         <div class="row" id="header"></div>         
@@ -47,7 +48,7 @@
                         <div class="col-sm-12 col-xs-12 dash_element_col col-md-12 col-lg-12">
                             <div class="row dash_element_holder">
                                 <div class="dash_element col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                                    <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                                    <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" data-pg-collapsed>
                                         <h4>Meine persönlichen Daten</h4> 
                                     </div>
                                     <div class="text-right col-md-6 col-lg-6 col-sm-6 col-xs-6" data-pg-collapsed>
@@ -74,7 +75,7 @@
                                             <label class="control-label" for="formInput142">Nachname</label>
                                             <input type="text" class="form-control profilTextfield" id="formInput142" placeholder="Mustermann" disabled="disabled">
                                         </div>
-                                        <div class="form-group profilTextfieldCollapse" data-pg-collapsed style="display:none"> 
+                                        <div class="form-group profilTextfieldCollapse" style="display:none" data-pg-collapsed> 
                                             <label class="control-label" for="formInput214">E-Mail</label>
                                             <input type="text" class="form-control" id="formInput214" placeholder="MaxMustermann@web.de">
                                         </div>
@@ -83,7 +84,7 @@
                                             <input type="text" class="form-control" id="formInput226" placeholder="xxxxxxxxxx">
                                         </div>                                         
                                     </div>
-                                    <div class="col-lg-6 col-md-6 profil_element col-sm-12 col-xs-12">
+                                    <div class="col-lg-6 col-md-6 profil_element col-sm-12 col-xs-12" data-pg-collapsed>
                                         <div class="form-group" data-pg-collapsed> 
                                             <label class="control-label" for="formInput154">Straße</label>
                                             <input type="text" class="form-control profilTextfield" id="formInput154" placeholder="Musterstraße 2" disabled="disabled">
@@ -106,16 +107,23 @@
                                         </div>                                         
                                     </div>
                                     <div class="col-lg-12 col-md-12 profil_kindliste col-sm-6 col-xs-6">
-                                        <div class="col-md-4" data-pg-collapsed>
+                                        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" data-pg-collapsed>
                                             <h4>Meine Kinder</h4> 
                                         </div>
-                                        <table class="table kind_tabelle_breite"> 
+                                        <div class="text-right col-md-6 col-lg-6 col-sm-6 col-xs-6">
+                                            <button type="button" class="btn btn-default btn_icon btn_icon" data-pg-collapsed onclick="location.href='kind_bearbeiten.html'">
+                                                <i class="glyphicon glyphicon-plus"></i>
+                                            </button>                                             
+                                        </div>
+                                        <table class="table table-striped table-hover kind_tabelle_breite"> 
                                             <thead> 
                                                 <tr class="kind_liste_tabelle"> 
                                                     <th class="kind_liste_tabelle">Name</th>                                                     
                                                     <th class="kind_liste_tabelle">Schule</th>                                                     
-                                                    <th class="kind_liste_tabelle">Klasse</th>                                                     
-                                                    <th class="kind_liste_tabelle">Abonnement</th>
+                                                    <th class="kind_liste_tabelle">Klasse</th>
+                                                    <th class="kind_liste_tabelle">Bags</th>
+                                                    <th class="kind_liste_tabelle">Enddatum</th>                                                     
+                                                    <th class="kind_liste_tabelle">Neues Abonnement</th>
                                                     <th class="kind_liste_tabelle">Bearbeiten</th>
                                                     <th class="kind_liste_tabelle">Entfernen</th>                                                     
                                                 </tr>                                                 
@@ -128,9 +136,14 @@
                                                     <td>Röntgen Gymnasium</td>                                                     
                                                     <td>5 a</td>
                                                     <td>
-                                                        <button type="button" class="btn btn-default button_paulo button_paulo_ext_dashboard" data-pg-collapsed onclick="location.href='bestellung_kunde.html'">neues Abonnement abschließen 
-                                                            <i class="fa fa-chevron-right"></i> 
-                                                        </button>
+                                                        <b>20</b> / 60                  
+                                                    </td>
+                                                    <td>11.11.2015                 
+</td>
+                                                    <td>
+                                                        <button type="button" class="btn btn-default btn_icon btn_icon btn_add_abo_rot" data-pg-collapsed="" onclick="location.href='bestellung_kunde.html'">
+                                                            <i class="glyphicon glyphicon-plus"></i>
+                                                        </button>                                                         
                                                     </td>
                                                     <td>
                                                         <button type="button" class="btn btn-default btn_icon btn_icon" data-pg-collapsed="" onclick="location.href='kind_bearbeiten.html'">
@@ -150,9 +163,14 @@
                                                     <td>Grundschule Süd</td>                                                     
                                                     <td>2 b</td>
                                                     <td>
-                                                        <button type="button" class="btn btn-default button_paulo button_paulo_ext_dashboard" onclick="location.href='bestellung_kunde.html'">neues Abonnement abschließen 
-                                                            <i class="fa fa-chevron-right"></i> 
-                                                        </button>
+                                                        <b>40</b> / 60                  
+                                                    </td>
+                                                    <td>17.09.2015                  
+</td>
+                                                    <td>
+                                                        <button type="button" class="btn btn-default btn_icon btn_icon btn_add_abo_rot" data-pg-collapsed="" onclick="location.href='bestellung_kunde.html'">
+                                                            <i class="glyphicon glyphicon-plus"></i>
+                                                        </button>                                                         
                                                     </td>
                                                     <td>
                                                         <button type="button" class="btn btn-default btn_icon btn_icon" data-pg-collapsed="" onclick="location.href='kind_bearbeiten.html'">
@@ -172,9 +190,14 @@
                                                     <td>Bosch Gymnasium</td>                                                     
                                                     <td>6 d</td>
                                                     <td>
-                                                        <button type="button" class="btn btn-default button_paulo button_paulo_ext_dashboard" onclick="location.href='bestellung_kunde.html'">neues Abonnement abschließen 
-                                                            <i class="fa fa-chevron-right"></i> 
-                                                        </button>
+                                                        <b>7</b> / 60                  
+                                                    </td>
+                                                    <td>14.08.2015                  
+</td>
+                                                    <td>
+                                                        <button type="button" class="btn btn-default btn_icon btn_icon btn_add_abo_rot" data-pg-collapsed="" onclick="location.href='bestellung_kunde.html'">
+                                                            <i class="glyphicon glyphicon-plus"></i>
+                                                        </button>                                                         
                                                     </td>
                                                     <td>
                                                         <button type="button" class="btn btn-default btn_icon btn_icon" data-pg-collapsed="" onclick="location.href='kind_bearbeiten.html'">
@@ -190,11 +213,6 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 text-right">
-                                        <button type="button" class="btn-default button_paulo button_paulo_ext_dashboard" onclick="location.href='kind_bearbeiten.html'">
-                                            <span></span> Kind hinzufügen 
-                                        </button>                                         
-                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -202,14 +220,10 @@
                 </div>                 
             </div>
         </div>         
-        <div class="row" id="footer"></div>         
+        <div class="row" id="footer" data-pg-collapsed></div>         
         <!-- Ende des Dokumentes -->         
-        <script>
-	        $("#header").load("header.html", function(){
-	        	setNav(2);
-	        });
-        </script>         
-        <script src="js/bootstrap.js"></script>         
-        <script src="js/functions.js"></script>         
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>      
+        <script src="js/functions.js"></script>
+        <script src="js/edit_save_profil.js"></script>        
     </body>     
 </html>
