--- a/LeckerBag/WebContent/mein_profil_lieferant.html
+++ b/LeckerBag/WebContent/mein_profil_lieferant.html
@@ -7,15 +7,16 @@
         <meta name="description" content="Beschreibung der Seite">         
         <meta name="author" content="Paul Kozakiewicz">         
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">         
-        <link href="css/bootstrap.css" rel="stylesheet">         
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">      
         <link href="css/style.css" rel="stylesheet" type="text/css">         
-        <link href="css/bootstrap-responsive.css" rel="stylesheet">         
         <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,900,500' rel='stylesheet' type='text/css'>
-        <script src="js/jquery.js"></script>
+        <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
         <script> 
 			$(function(){
-			  $("#header").load("header.html"); 
-			  $("#footer").load("footer.html"); 
+		        $("#header").load("header2.html", function(){
+		        	setNav(2);
+		        });
+			  	$("#footer").load("footer.html"); 
 			});
 		</script>         
     </head>     
@@ -51,8 +52,11 @@
                                         <h4>Meine persönlichen Daten</h4> 
                                     </div>
                                     <div class="text-right col-md-6 col-lg-6 col-sm-6 col-xs-6">
-                                        <button id="btn_profil_kunde_edit" type="button" class="btn btn-default btn_icon btn_icon btn_icon_padding" onclick="" data-pg-collapsed>
+                                        <button id="btn_profil_lieferant_edit" type="button" class="btn btn-default btn_icon btn_icon btn_icon_padding" onclick="editProfilLieferant(false)" data-pg-collapsed>
                                             <i class="glyphicon glyphicon-pencil"></i>
+                                        </button>
+                                        <button id="btn_profil_lieferant_save" type="button" class="btn btn-default btn_icon btn_icon btn_icon_padding" onclick="editProfilLieferant(true)" style="display:none" data-pg-collapsed>
+                                            <i class="fa fa-check"></i>
                                         </button>
                                         <button type="button" class="btn btn-default btn_icon btn_icon" data-pg-collapsed onclick="location.href='profil_loeschen_kunde.html'">
                                             <i class="glyphicon glyphicon-trash"></i>
@@ -61,21 +65,21 @@
                                     <div class="col-md-6 col-lg-6 profil_element col-sm-12 col-xs-12">
                                         <div class="form-group"> 
                                             <label class="control-label" for="formInput126">Unternehmen</label>
-                                            <input type="text" class="form-control profilTextfield" id="formInput126" placeholder="Müllerbäck" disabled="disabled">
+                                            <input type="text" class="form-control profilTextfield_lieferant" id="formInput126" placeholder="Müllerbäck" disabled="disabled">
                                         </div>
                                         <div class="form-group" data-pg-collapsed> 
                                             <label class="control-label" for="formInput136">Vorname</label>
-                                            <input type="text" class="form-control profilTextfield" id="formInput136" placeholder="Max" disabled="disabled">
+                                            <input type="text" class="form-control profilTextfield_lieferant" id="formInput136" placeholder="Max" disabled="disabled">
                                         </div>
                                         <div class="form-group" data-pg-collapsed> 
                                             <label class="control-label" for="formInput142">Nachname</label>
-                                            <input type="text" class="form-control profilTextfield" id="formInput142" placeholder="Mustermann" disabled="disabled">
+                                            <input type="text" class="form-control profilTextfield_lieferant" id="formInput142" placeholder="Mustermann" disabled="disabled">
                                         </div>
-                                        <div class="form-group profilTextfieldCollapse" data-pg-collapsed style="display:none"> 
+                                        <div class="form-group profilTextfieldCollapse_lieferant" data-pg-collapsed style="display:none"> 
                                             <label class="control-label" for="formInput214">E-Mail</label>
                                             <input type="text" class="form-control" id="formInput214" placeholder="MaxMustermann@web.de">
                                         </div>
-                                        <div class="form-group profilTextfieldCollapse" data-pg-collapsed style="display:none"> 
+                                        <div class="form-group profilTextfieldCollapse_lieferant" data-pg-collapsed style="display:none"> 
                                             <label class="control-label" for="formInput226">Neues Passwort</label>
                                             <input type="text" class="form-control" id="formInput226" placeholder="xxxxxxxxxx">
                                         </div>                                         
@@ -83,21 +87,21 @@
                                     <div class="col-lg-6 col-md-6 profil_element col-sm-12 col-xs-12" data-pg-collapsed>
                                         <div class="form-group" data-pg-collapsed> 
                                             <label class="control-label" for="formInput154">Straße</label>
-                                            <input type="text" class="form-control profilTextfield" id="formInput154" placeholder="Musterstraße 2" disabled="disabled">
+                                            <input type="text" class="form-control profilTextfield_lieferant" id="formInput154" placeholder="Musterstraße 2" disabled="disabled">
                                         </div>
                                         <div class="form-group" data-pg-collapsed> 
                                             <label class="control-label" for="formInput166">Ort</label>
-                                            <input type="text" class="form-control profilTextfield" id="formInput166" placeholder="97070 Würzburg" disabled="disabled">
+                                            <input type="text" class="form-control profilTextfield_lieferant" id="formInput166" placeholder="97070 Würzburg" disabled="disabled">
                                         </div>
                                         <div class="form-group" data-pg-collapsed> 
                                             <label class="control-label" for="formInput174">Telefon</label>
-                                            <input type="text" class="form-control profilTextfield" id="formInput174" placeholder="0931 / 123456" disabled="disabled">
+                                            <input type="text" class="form-control profilTextfield_lieferant" id="formInput174" placeholder="0931 / 123456" disabled="disabled">
                                         </div>                                         
-                                        <div class="form-group profilTextfieldCollapse" data-pg-collapsed style="display:none"> 
+                                        <div class="form-group profilTextfieldCollapse_lieferant" data-pg-collapsed style="display:none"> 
                                             <label class="control-label" for="formInput214">E-Mail</label>
                                             <input type="text" class="form-control" id="formInput214" placeholder="MaxMustermann@web.de">
                                         </div>
-                                        <div class="form-group profilTextfieldCollapse" data-pg-collapsed style="display:none"> 
+                                        <div class="form-group profilTextfieldCollapse_lieferant" data-pg-collapsed style="display:none"> 
                                             <label class="control-label" for="formInput226">Neues Passwort</label>
                                             <input type="text" class="form-control" id="formInput226" placeholder="xxxxxxxxxx">
                                         </div>                                         
@@ -111,7 +115,7 @@
                                                 <i class="glyphicon glyphicon-pencil"></i>
                                             </button>
                                         </div>
-                                        <table class="table kind_tabelle_breite"> 
+                                        <table class="table table-striped table-hover kind_tabelle_breite"> 
                                             <thead data-pg-collapsed> 
                                                 <tr class="kind_liste_tabelle"> 
                                                     <th class="kind_liste_tabelle">Schule</th>                                                     
@@ -172,14 +176,8 @@
             </div>
         </div>         
         <div class="row" id="footer" data-pg-collapsed></div>         
-        <script>
-	        $("#header").load("header.html", function(){
-	        	setNav(2);
-	        });
-        </script>         
-        <!-- Ende des Dokumentes -->         
-        <script src="js/jquery.js"></script>         
-        <script src="js/bootstrap.js"></script>         
+    	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>       
         <script src="js/functions.js"></script>         
+        <script src="js/edit_save_profil.js"></script>  
     </body>     
 </html>
