--- a/LeckerBag/WebContent/profil_kind.html
+++ b/LeckerBag/WebContent/profil_kind.html
@@ -7,137 +7,131 @@
         <meta name="description" content="Beschreibung der Seite">         
         <meta name="author" content="Paul Kozakiewicz">         
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">         
-        <link href="css/bootstrap.css" rel="stylesheet">         
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">      
         <link href="css/style.css" rel="stylesheet" type="text/css">         
-        <link href="css/bootstrap-responsive.css" rel="stylesheet">         
-        <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,900,500' rel='stylesheet' type='text/css'>         
-        <script src="js/jquery.js"></script>
+        <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,900,500' rel='stylesheet' type='text/css'>
+        <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
         <!-- Scheduler -->
         <script src="http://cdn.alloyui.com/3.0.1/aui/aui-min.js"></script>
-        <link href="http://cdn.alloyui.com/3.0.1/aui-css/css/bootstrap.min.css" rel="stylesheet">
-    </link>
-    <!-- Scheduler -->     
-    <script> 
+    	<!-- Scheduler -->          
+        <script> 
 			$(function(){
-			  $("#header").load("header.html"); 
-			  $("#footer").load("footer.html"); 
+		        $("#header").load("header.html", function(){
+		        	setNav(2);
+		        });
+			  	$("#footer").load("footer.html"); 
 			});
-		</script>     
-</head> 
-<body> 
-    <div class="row" id="header"></div>     
-    <div class="row">
-        <div class="col-md-12">
-            <div class="container wrapper">
-                <div class="row" data-pg-collapsed>
-                    <div class="content_header_element col-md-10 col-sm-10 col-xs-10 col-lg-10" data-pg-collapsed>
-                        <h3>Mein Kind&nbsp;</h3>
+		</script>         
+    </head>     
+    <body> 
+        <div class="row" id="header"></div>         
+        <div class="row">
+            <div class="col-md-12">
+                <div class="container wrapper">
+                    <div class="row" data-pg-collapsed>
+                        <div class="content_header_element col-md-10 col-sm-10 col-xs-10 col-lg-10" data-pg-collapsed>
+                            <h3>Mein Kind&nbsp;</h3>
+                        </div>
+                        <div class="content_header_element text-right col-md-2 col-sm-2 col-xs-2 col-lg-2" data-pg-collapsed>
+                            <a href="#"><i class="fa fa-question-circle fa-2x" id="help_icon"></i></a>
+                            <br/>
+                            <a>benötigen Sie hilfe?</a>
+                        </div>
                     </div>
-                    <div class="content_header_element text-right col-md-2 col-sm-2 col-xs-2 col-lg-2" data-pg-collapsed>
-                        <a href="#"><i class="fa fa-question-circle fa-2x" id="help_icon"></i></a>
-                        <br/>
-                        <a>benötigen Sie hilfe?</a>
-                    </div>
-                </div>
-                <hr class="hr_line"/>
-                <ol class="breadcrumb" data-pg-collapsed> 
-                    <li>
-                        <a href="dashboard_kunde.html">Mein Leckerbag</a>
-                    </li>                     
-                    <li>
-                        <a href="mein_profil_kunde.html">Mein Profil</a>
-                    </li>                     
-                    <li>
-                        <font>Mein Kind</font>
-                    </li>                     
-                </ol>
-                <div class="row">
-                    <div class="col-sm-12 col-xs-12 dash_element_col col-md-12 col-lg-12">
-                        <div class="row dash_element_holder">
-                            <div class="dash_element col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                                <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" data-pg-collapsed>
-                                    <h4>Daten des Kindes</h4>
-                                </div>
-                                <div class="text-right col-md-6 col-lg-6 col-sm-6 col-xs-6" data-pg-collapsed>
-                                    <button id="btn_profil_kunde_edit" type="button" class="btn btn-default btn_icon btn_icon btn_icon_padding" onclick="" data-pg-collapsed>
-                                        <i class="glyphicon glyphicon-pencil"></i>
-                                    </button>
-                                    <button id="btn_profil_kunde_save" type="button" class="btn btn-default btn_icon btn_icon btn_icon_padding" onclick="" style="display:none" data-pg-collapsed>
-                                        <i class="fa fa-check"></i>
-                                    </button>
-                                    <button type="button" class="btn btn-default btn_icon btn_icon" data-pg-collapsed onclick="location.href='profil_loeschen_kind.html'">
-                                        <i class="glyphicon glyphicon-trash"></i>
-                                    </button>                                     
-                                </div>
-                                <div class="col-md-6 col-lg-6 profil_element col-sm-12 col-xs-12" data-pg-collapsed>
-                                    <div class="form-group"> 
-                                        <label class="control-label" for="formInput136">Vorname</label>
-                                        <input type="text" class="form-control profilTextfield" id="formInput136" placeholder="Arnold" disabled="disabled">
+                    <hr class="hr_line"/>
+                    <ol class="breadcrumb" data-pg-collapsed> 
+                        <li>
+                            <a href="dashboard_kunde.html">Mein Leckerbag</a>
+                        </li>                         
+                        <li>
+                            <a href="mein_profil_kunde.html">Mein Profil</a>
+                        </li>                         
+                        <li>
+                            <font>Mein Kind</font>
+                        </li>                         
+                    </ol>
+                    <div class="row">
+                        <div class="col-sm-12 col-xs-12 dash_element_col col-md-12 col-lg-12">
+                            <div class="row dash_element_holder">
+                                <div class="dash_element col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                                    <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" data-pg-collapsed>
+                                        <h4>Daten des Kindes</h4>
                                     </div>
-                                    <div class="form-group"> 
-                                        <label class="control-label" for="formInput142">Schule</label>
-                                        <input type="text" class="form-control profilTextfield" id="formInput142" placeholder="Röntgen Gymnasium" disabled="disabled">
+                                    <div class="text-right col-md-6 col-lg-6 col-sm-6 col-xs-6" data-pg-collapsed>
+                                        <button id="btn_profil_kind_edit" type="button" class="btn btn-default btn_icon btn_icon btn_icon_padding" onclick="editProfilKind(false)" data-pg-collapsed>
+                                            <i class="glyphicon glyphicon-pencil"></i>
+                                        </button>
+                                        <button id="btn_profil_kind_save" type="button" class="btn btn-default btn_icon btn_icon btn_icon_padding" onclick="editProfilKind(true)" style="display:none" data-pg-collapsed>
+                                            <i class="fa fa-check"></i>
+                                        </button>
+                                        <button type="button" class="btn btn-default btn_icon btn_icon" data-pg-collapsed onclick="location.href='profil_loeschen_kind.html'">
+                                            <i class="glyphicon glyphicon-trash"></i>
+                                        </button>                                         
                                     </div>
-                                    <div class="form-group profilTextfieldCollapse" data-pg-collapsed style="display:none"> 
-                                        <label class="control-label" for="formInput214">E-Mail</label>
-                                        <input type="text" class="form-control" id="formInput214" placeholder="MaxMustermann@web.de">
-                                    </div>
-                                    <div class="form-group profilTextfieldCollapse" data-pg-collapsed style="display:none"> 
-                                        <label class="control-label" for="formInput226">Neues Passwort</label>
-                                        <input type="text" class="form-control" id="formInput226" placeholder="xxxxxxxxxx">
-                                    </div>                                     
-                                </div>
-                                <div class="col-lg-6 col-md-6 profil_element col-sm-12 col-xs-12">
-                                    <div class="form-group"> 
-                                        <label class="control-label" for="formInput154">Nachname</label>
-                                        <input type="text" class="form-control profilTextfield" id="formInput154" placeholder="Mustermann" disabled="disabled">
-                                    </div>
-                                    <div class="form-group"> 
-                                        <label class="control-label" for="formInput166">Klasse</label>
-                                        <input type="text" class="form-control profilTextfield" id="formInput166" placeholder="5 a" disabled="disabled">
-                                    </div>                                     
-                                </div>
-                                <hr class="hr_line"/>
-                                <div class="col-md-12 col-lg-12 col-sm-6 col-xs-6 kind_profil_aktuellesabo">
-                                    <h4>Aktuelles Abonnement</h4>
-                                    <div class="row">
-                                        <div class="col-lg-8 col-md-8 col-sm-7 col-xs-7">
-                                            <ul class="pg-empty-placeholder">
-                                                <li class="abonnement_element">
-                                                    <p color="#5b586b"><font class="beschreibung">60 Tage Abo</font> / Anzahl: 4/12 <br> <font class="beschreibung">Kind: </font> <a>Arnold Mustermann</a> <br> (<a>Abonnementdetails</a>)</p>
-                                                </li>
-                                            </ul>                                             
+                                    <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12" data-pg-collapsed>
+                                        <div class="form-group"> 
+                                            <label class="control-label" for="formInput136">Vorname</label>
+                                            <input type="text" class="form-control profilTextfield_kind" id="formInput136" placeholder="Arnold" disabled="disabled">
                                         </div>
-                                        <div class="col-md-4 col-lg-4 col-xs-5 col-sm-5 text-left">
-                                            <button type="button" class="btn btn-default button_paulo button_paulo_ext_dashboard" onclick="location.href='bestellung_kunde.html'">neues Abonnement abschließen 
-                                                <i class="fa fa-chevron-right"></i> 
-                                            </button>                                             
+                                        <div class="form-group"> 
+                                            <label class="control-label" for="formInput142">Schule</label>
+                                            <input type="text" class="form-control profilTextfield_kind" id="formInput142" placeholder="Röntgen Gymnasium" disabled="disabled">
                                         </div>
-                                    </div>                                     
-                                </div>
-                                <div class="row">
-                                    <div class="col-md-12 dash_element col-sm-12 col-xs-12 col-lg-12">
-                                        <h4>Ihre nächsten Lieferungen</h4>
-                                        <div class="row">
-                                            <div id="scheduler_profil_kind"></div>
+                                        <div class="form-group profilTextfieldCollapse" data-pg-collapsed style="display:none"> 
+                                            <label class="control-label" for="formInput214">E-Mail</label>
+                                            <input type="text" class="form-control" id="formInput214" placeholder="MaxMustermann@web.de">
+                                        </div>
+                                        <div class="form-group profilTextfieldCollapse" data-pg-collapsed style="display:none"> 
+                                            <label class="control-label" for="formInput226">Neues Passwort</label>
+                                            <input type="text" class="form-control" id="formInput226" placeholder="xxxxxxxxxx">
                                         </div>                                         
+                                    </div>
+                                    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" data-pg-collapsed>
+                                        <div class="form-group"> 
+                                            <label class="control-label" for="formInput154">Nachname</label>
+                                            <input type="text" class="form-control profilTextfield_kind" id="formInput154" placeholder="Mustermann" disabled="disabled">
+                                        </div>
+                                        <div class="form-group"> 
+                                            <label class="control-label" for="formInput166">Klasse</label>
+                                            <input type="text" class="form-control profilTextfield_kind" id="formInput166" placeholder="5 a" disabled="disabled">
+                                        </div>                                         
+                                    </div>
+                                    <div class="col-md-12 col-lg-12 col-sm-6 col-xs-6 kind_profil_aktuellesabo">
+                                        <hr class="hr_line"/>
+                                        <h4>Aktuelles Abonnement</h4>
+                                        <div class="row">
+                                            <div class="col-lg-8 col-md-8 col-sm-7 col-xs-7">
+                                                <ul class="pg-empty-placeholder">
+                                                    <li class="abonnement_element">
+                                                        <p color="#5b586b"><font class="beschreibung"><b>Abo: </b>60 Tage</font><br><b>Bags: </b>15 / 60 <br><b>Laufzeit: </b>30.10.2015<br> <font class="beschreibung">Kind: </font> <a>Arnold Mustermann</a> <br> (<a>Abonnementdetails</a>)</p>
+                                                    </li>
+                                                </ul>                                                 
+                                            </div>
+                                            <div class="col-md-4 col-lg-4 col-xs-5 col-sm-5 text-left">
+                                                <button type="button" class="btn btn-default button_paulo button_paulo_ext_dashboard" onclick="location.href='bestellung_kunde.html'">neues Abonnement abschließen 
+                                                    <i class="fa fa-chevron-right"></i> 
+                                                </button>                                                 
+                                            </div>
+                                        </div>                                         
+                                    </div>
+                                    <div class="row">
+										<div class="col-md-12 dash_element col-sm-12 col-xs-12 col-lg-12">
+										    <h4>Ihre nächsten Lieferungen</h4>
+										    <div class="row">
+										        <div id="scheduler_profil_kind"></div>
+										    </div>     
+										</div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>             
+                </div>                 
+            </div>
         </div>
-    </div>
-    <div class="row" id="footer"></div>     
-    <!-- Ende des Dokumentes -->     
-    <script>
-	        $("#header").load("header.html", function(){
-	        	setNav(2);
-	        });
-        </script>     
-    <script>
+        <div class="row" id="footer"></div>         
+        <!-- Ende des Dokumentes -->         
+        <script>
         	YUI().use(
         		'aui-scheduler',
         		function(Y) {
@@ -175,8 +169,10 @@
         			});
         		}
         	);
-        </script>     
-    <script src="js/jquery.js"></script>     
-    <script src="js/bootstrap.js"></script>     
-    <script src="js/functions.js"></script>     
-</body> 
+        </script>       
+        <!-- Ende des Dokumentes -->                
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>      
+        <script src="js/functions.js"></script>
+        <script src="js/edit_save_profil.js"></script>
+    </body>     
+</html>
