--- a/LeckerBag/WebContent/schulen_bearbeiten_lieferant.html
+++ b/LeckerBag/WebContent/schulen_bearbeiten_lieferant.html
@@ -7,18 +7,24 @@
         <meta name="description" content="Beschreibung der Seite">         
         <meta name="author" content="Paul Kozakiewicz">         
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">         
-        <link href="css/bootstrap.css" rel="stylesheet">         
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">      
         <link href="css/style.css" rel="stylesheet" type="text/css">         
-        <link href="css/bootstrap-responsive.css" rel="stylesheet">         
-        <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,900,500' rel='stylesheet' type='text/css'>         
-        <script src="js/jquery.js"></script>         
+        <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,900,500' rel='stylesheet' type='text/css'>
+        <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
         <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
         <script> 
 			$(function(){
-			  $("#header").load("header.html"); 
-			  $("#footer").load("footer.html");
+		        $("#header").load("header2.html", function(){
+		        	setNav(2);
+		        	autoCenter();
+		        	var checkboxes = document.getElementsByClassName("school_cb");
+		        	for(var i=0; i<checkboxes.length; i++){
+		        		checkboxes[i].addEventListener("change", school_get_checked);
+		        	}
+		        });
+			  	$("#footer").load("footer.html"); 
 			});
-		</script>         
+		</script>          
     </head>     
     <body>
         <div class="row" id="header" data-pg-collapsed></div>         
@@ -133,18 +139,7 @@
         </div>         
         <div class="row" id="footer" data-pg-collapsed></div>
         <!-- Ende des Dokumentes -->         
-        <script>
-	        $("#header").load("header.html", function(){
-	        	setNav(2);
-	        	autoCenter();
-	        	var checkboxes = document.getElementsByClassName("school_cb");
-	        	for(var i=0; i<checkboxes.length; i++){
-	        		checkboxes[i].addEventListener("change", school_get_checked);
-	        	}
-	        });  
-        </script>
-        <script src="js/jquery.js"></script>
-        <script src="js/bootstrap.js"></script>         
+    	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>          
         <script src="js/functions.js"></script>         
         <script src="js/lieferant_maps_schulauswahl.js"></script>         
     </body>     
